<resources>
    <string name="app_name">PayPos</string>
    <string name="creerCompte"><u>Inscrivez-vous !</u></string>
    <string name="email">Email</string>
    <string name="form_password">Mot de passe</string>
    <string name="bienvenue">BIENVENUE SUR AMENPAY</string>
    <string name="form_GSM">Numéro GSM</string>
    <string name="valider">Valider</string>
    <string name="nom">Nom</string>
    <string name="prenom">Prenom</string>
    <string name="chek_internet">Vous n\'êtes pas connectés à Internet</string>
    <string name="champs_obligatoir">Champ obligatoire</string>
    <string name="email_invalide">Adresse mail invalide</string>
    <string name="EmailOuMotDePasseInvalide">Email ou mot de passe invalide</string>
    <string name="s_il_vous_pla_t_attendez">S\'il vous plaît, attendez…</string>
    <string name="action_info">Info</string>
    <string name="action_contact">Contact</string>
    <string name="action_manuel">Manuel</string>
    <string name="action_profil">Profil</string>
    <string name="action_rib">RIB bancaire</string>
    <string name="action_settings">Paramètres</string>

</resources>
