<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- "Mark Favorite", should appear as action button if possible -->
    <item
        android:id="@+id/action_profil"
        android:icon="@drawable/ic_perm_contact_calendar_black_18dp"
        android:title="@string/action_profil"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_contact"
        android:icon="@drawable/ic_perm_contact_calendar_black_18dp"
        android:title="@string/action_contact"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_rib"
        android:icon="@drawable/ic_perm_contact_calendar_black_18dp"
        android:title="@string/action_rib"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_manuel"
        android:icon="@drawable/ic_perm_contact_calendar_black_18dp"
        android:title="@string/action_manuel"
        app:showAsAction="never"/>

    <!-- Settings, should always be in the overflow -->
    <item android:id="@+id/action_settings"
        android:icon="@drawable/ic_settings_black_18dp"
        android:title="@string/action_settings"
        app:showAsAction="never"/>

</menu>