<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Inscription">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/namelayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:padding="8dp"
        android:textColorHint="@color/holo_green_15"
        android:theme="@style/ThemeSpinner"
        app:hintTextAppearance="@style/TextLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_profile"
            android:drawablePadding="8dp"
            android:hint="@string/nom"
            android:inputType="text"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:textColorHint="@color/holo_green_15"
            android:textSize="18sp"
            android:theme="@style/ThemeSpinner"
            app:errorEnabled="true"
            app:layout_constraintTop_toBottomOf="@+id/namelayout" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:padding="8dp"
        android:textColorHint="@color/holo_green_15"
        android:theme="@style/ThemeSpinner"
        app:hintTextAppearance="@style/TextLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/namelayout">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_profile"
            android:drawablePadding="8dp"
            android:hint="@string/prenom"
            android:inputType="text"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:textColorHint="@color/holo_green_15"
            android:textSize="18sp"
            android:theme="@style/ThemeSpinner"
            app:errorEnabled="true" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:padding="8dp"
        android:textColorHint="@color/holo_green_15"
        android:theme="@style/ThemeSpinner"
        app:hintTextAppearance="@style/TextLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_email"
            android:drawablePadding="8dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:textColorHint="@color/holo_green_15"
            android:textSize="18sp"
            android:theme="@style/ThemeSpinner"
            app:errorEnabled="true" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/GSMLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:padding="8dp"
        android:textColorHint="@color/holo_green_15"
        android:theme="@style/ThemeSpinner"
        app:errorEnabled="true"
        app:hintTextAppearance="@style/TextLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout2">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/numeroGSM"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_phone"
            android:drawablePadding="8dp"
            android:hint="@string/form_GSM"
            android:inputType="number"
            android:maxLength="8"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:textColorHint="@color/holo_green_15"
            android:textSize="18sp"
            android:theme="@style/ThemeSpinner"
            app:layout_constraintTop_toBottomOf="@+id/GSMLayout" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="32dp"
        android:background="@color/colorAccent"
        android:text="@string/valider"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:textStyle="bold"
        android:onClick="Valider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/GSMLayout" />
</android.support.constraint.ConstraintLayout>